# zano-kit-android

./: .gitignore  CONTEXT.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/io/horizontalsystems/zanokit/sample/: MainActivity.kt  MainViewModel.kt  WalletConfig.kt
app/src/main/java/io/horizontalsystems/zanokit/sample/ui/: BalanceScreen.kt  SendScreen.kt  TransactionsScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
patches/: 0001-Add-generate_address-and-generate_address_from_deriv.patch
zanokit/: CMakeLists.txt  build.gradle  consumer-rules.pro  proguard-rules.pro
zanokit/external-libs/include/: plain_wallet_api.h
zanokit/src/main/cpp/: helpers.cpp  helpers.hpp  wallet2_api_c.cpp  wallet2_api_c.h  zano_checksum.h  zano_jni.cpp
zanokit/src/main/java/io/horizontalsystems/zanokit/: KitManager.kt  Models.kt  SyncStateManager.kt  ZanoCore.kt  ZanoKit.kt  ZanoNative.kt  ZanoWallet.kt  ZanoWalletApi.kt
zanokit/src/main/java/io/horizontalsystems/zanokit/storage/: ZanoDatabase.kt  ZanoStorage.kt
zanokit/src/main/java/io/horizontalsystems/zanokit/storage/dao/: AssetDao.kt  BalanceDao.kt  BlockHeightDao.kt  SentTransferDao.kt  TransactionDao.kt  WalletInfoDao.kt
zanokit/src/main/java/io/horizontalsystems/zanokit/storage/entities/: AssetEntity.kt  BalanceEntity.kt  BlockHeightEntity.kt  SentTransferEntity.kt  TransactionEntity.kt  WalletInfoEntity.kt
zanokit/src/main/java/io/horizontalsystems/zanokit/util/: Bip39Derivation.kt  RestoreHeight.kt
